Un menu horizontal con  :hover :visited y barras entre links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <ol>
         
         <li>
-            <!-- <a> href="PO1/index.html" -->
-                Práctica Inicial (HTML/CSS)
-            <!-- </a> -->
+            <a href= "practicaBlockinline/index.html">
+                Práctica Block/Inline (HTML/CSS)
+            </a> 
         </li>
         <li>item02</li>
         <li>item03</li>
