Practica Imagen Finalizada, con botón atrás y imagenes IMG y Bloque

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
                 Práctica Block/Inline (HTML/CSS)
             </a> 
         </li>
-        <li>item02</li>
+        <li>
+            <a href= "practicaImagenes/index.html">
+                Práctica Imagenes (Block/div Inline/img)        
+            </a>
+        </li>
         <li>item03</li>
     </ol>
 </body>
