practica 3 agregada a index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 Práctica Imagenes (Block/div Inline/img)        
             </a>
         </li>
-        <li>item03</li>
+        <li>
+            <a href= "practicaBanner/index.html">
+                Práctica Banner (banner + articulo)        
+            </a>
+        </li>
     </ol>
 </body>
 </html>
