PracticaBanner Montañas con fotos buenas y casi terminada, usando Position

--- a/practicaBanner/index.html
+++ b/practicaBanner/index.html
@@ -61,7 +61,26 @@
     </header>
 
     <!-- Contenido de la web -->
-    <section>
+    <section class="articulos">
+
+        
+        <img class="articulos__fondo" src="../practicaBanner/img/desktop/mountain_fondo.jpg">
+
+        <p class="articulos__parrafo01">
+                Otras características fundamentales para considerar un terreno montañoso son el clima y la vegetación. El clima de montaña es más frío y húmedo que el del llano, ya que la temperatura desciende a un ritmo aproximado de 5 °C cada 1 km de altitud y las lluvias van aumentado con la altura, debido al llamado «efecto pantalla», si bien es frecuente encontrar en las zonas montañosas vertientes más húmedas (expuestas a vientos húmedos), frente a las más secas, en las que esos mismos vientos han perdido la humedad por elevación y tienden a absorber la existente en el suelo, fenómeno conocido como «efecto Föhn»; tal es el fenómeno que se produce en los Pirineos, donde su vertiente norte es más húmeda que la española o sur.
+                <br>
+                <br>
+                La vegetación en montaña se encuentra escalonada o en pisos térmicos. En los pisos inferiores podemos encontrar vegetación similar a la del llano circundante pero a medida que se asciende van apareciendo especies más higrófilas y más resistentes al frío; tras las últimas especies arbóreas aparece la pradera alpina seguida del roquedo e incluso la nieve perpetua. Las especies presentes en cada uno de estos pisos y la altitud a la que podemos encontrarlas varían según los continentes y también con la latitud, pues no es lo mismo una zona montañosa en zonas subpolares que en zonas tropicales.
+        </p>
+        <p class="articulos__parrafo02">
+                Hay montañas de estilos tectónicos, de plegamientos y fallas mixtas germánicas, jurásicas y alpinas.
+                <br>
+                <br>
+                Fruto de las distintas orogénesis podemos encontrar montañas plegadas o producto de una falla o fractura; e incluso plegado-fracturadas. También la hay de origen volcánico, como sucede con el Teide, en Tenerife.
+                <br>
+                <br>
+                Según su altura las montañas se pueden dividir en colinas, montañas medias, y montañas altas. Por la forma en que se agrupan podemos encontrar cordilleras, unidas en sentido longitudinal, y macizos, agrupadas en forma más circular o compacta.
+        </p>
 
     </section>
 
