--- a/practicaBanner/montana.html
+++ b/practicaBanner/montana.html
@@ -44,7 +44,7 @@
     <!-- Contenido de la web -->
     <section class= "articulo">
        
-        <img src="../practicaBanner/img/desktop/Chrysanthemum.jpg" alt="flor naranja chrysanthemum" class="bannerMarca">
+        <img src="../practicaBanner/img/desktop/ph1.jpg" alt="montaña cielo agua" class="bannerMarca">
 
         <p class="articulo__texto-der" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quasi aspernatur atque! Sequi sit, tempore laborum animi ipsum dolores placeat aliquid, asperiores ea facere enim quaerat officiis? Amet, voluptatum quis?  <br>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita!
@@ -56,6 +56,22 @@
 
     </section>
 
+    <section class="articulo02">
+        <img src="../practicaBanner/img/desktop/ph2.jpg" alt="montaña cielo agua" class="articulo02__foto">
+        <p class= "articulo02__parrafo02">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quasi aspernatur atque! Sequi sit, tempore laborum animi ipsum dolores placeat aliquid, asperiores ea facere enim quaerat officiis? Amet, voluptatum quis?  <br>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita!
+        </p>
+    </section>
+
+    <section class="articulo03">
+        <img src="../practicaBanner/img/desktop/ph3.jpg" alt="montaña cielo agua" class="articulo03__foto">
+        <p class="articulo02__parrafo03">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quasi aspernatur atque! Sequi sit, tempore laborum animi ipsum dolores placeat aliquid, asperiores ea facere enim quaerat officiis? Amet, voluptatum quis?  <br>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita! 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore sunt, ex aliquid dolorum sed sapiente nam autem unde ipsam dolor accusamus maiores maxime, quasi iste porro quae explicabo expedita!
+        </p>
+    </section>
+    
     <!-- Footer -->
     <footer>
 
